[package]
name = "batched-fn"
version = "0.1.5"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/epwalsh/batched-fn"
homepage = "https://github.com/epwalsh/batched-fn"
description = "A macro for batched processing"

[features]
fast = ["flume"]
default = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "batched_fn"
path = "src/lib.rs"

[[example]]
name = "example"

[dependencies]
tokio = { version = "0.2.13", features = ["sync", "time", "rt-core"] }
once_cell = "1.3.1"
flume = { version = "0.7.1", optional = true }

[dev-dependencies]
tokio = { version = "0.2.13", features = ["sync", "time", "rt-core", "rt-threaded", "macros"] }
