[package]
name = "batched-fn"
version = "0.2.4"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/epwalsh/batched-fn"
homepage = "https://github.com/epwalsh/batched-fn"
description = "Middleware for serving deep learning models with batched prediction"
keywords = ["deep-learning", "batched-prediction", "backpressure", "server"]
categories = ["science", "web-programming::http-server", "asynchronous"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "batched_fn"
path = "src/lib.rs"

[[example]]
name = "example"

[dependencies]
once_cell = "1.3.1"
flume = "0.10.0"
futures = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
